[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/themes/main_theme.tres" type="Theme" id=1]
[ext_resource path="res://dev/scripts/optionLbl.gd" type="Script" id=2]
[ext_resource path="res://dev/scenes/comp/msg_lbl.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 90.5, 32.5 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.0196078, 0.333333, 0.0313726, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30

[node name="optionLbl" type="Area2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 80.5, 22.5 )
shape = SubResource( 5 )

[node name="answer" type="Label" parent="."]
margin_right = 159.0
margin_bottom = 52.0
theme = ExtResource( 1 )
custom_styles/normal = SubResource( 6 )
text = "answer"
align = 1
valign = 1

[node name="description" parent="." instance=ExtResource( 3 )]
text = "Touch / Press \"E\" to select answer"

[node name="actionBtn" type="Button" parent="."]
margin_left = -11.0
margin_top = -2.0
margin_right = 172.0
margin_bottom = 55.0
flat = true

[connection signal="body_entered" from="." to="." method="_on_optionLbl_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_optionLbl_body_exited"]
[connection signal="pressed" from="actionBtn" to="." method="_on_actionBtn_pressed"]
